<resources>
    <string name="app_name">Pintuco App</string>
    <string name="title_activity_puntos">Punto de Venta</string>
    <string name="title_activity_precios">Ventas</string>
    <string name="title_activity_promo">Promoción</string>
    <string name="title_activity_gps">Registro</string>
    <string name="title_activity_exhi">Exhibición</string>
    <string name="title_activity_flooring">Stock</string>
    <string name="title_activity_pr">Precios</string>
    <string name="title_activity_implementacion">Implementacion</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_agotados">Agotados</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Siguiente</string>
    <string name="title_activity_result">Results!!!</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAd4j6z6jx8T3rhpdWJT3XZdtg1xJ_GGrw</string>
    <string name="settings_menu_item">Settings</string>
    <string name="name">PintucoAPP.name</string>
    <string name="cluf">PintucoAPP.cluf</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="city">Ciudad</string>
    <string name="prom">Promotor</string>
    <string name="retail">Retail</string>
    <string name="sucursal">Sucursal</string>
    <string name="status">Marca</string>
    <string name="semana">Semana</string>
    <string name="codigo">Codigo</string>
    <string name="usuario">Usuario</string>
    <string name="categoria">Categoría</string>
    <string name="punto_venta">Punto de venta</string>
    <string name="tareass">Tareas</string>
    <string name="ejecutada">Ejecutada</string>
    <string name="subcat">Subcategoría</string>
    <string name="variante">Variante</string>
    <string name="presentacion">Presentacion</string>
    <string name="otros">Otros</string>
    <string name="carasyganchos">Caras/Ganchos</string>
    <string name="filtro">Filtro</string>
    <string name="search">Buscar</string>
    <string name="tipo">Tipo</string>
    <string name="local">Local</string>
    <string name="codigo_fabril">Código Fabril</string>
    <string name="vendedor_fabril">Vendedor Fabril</string>
    <string name="tipoim">Implementación</string>
    <string name="modo">Modo Foto</string>
    <string name="promo">Promoción</string>
    <string name="productos">Productos</string>
    <string name="tipof">Foto Exhibición</string>
    <string name="njefe">Nombre Jefe Almacen</string>
    <string name="obsv">Observación</string>
    <string name="tipoexh">Tipo Exhibición</string>
    <string name="numexh">Numero de Exhibidores</string>
    <string name="comentario">Comentario</string>
    <string name="caracter">200</string>
    <string name="registro">Registro</string>
    <string name="lat">Latitud</string>
    <string name="total">Total</string>
    <string name="novedades">Novedades</string>
    <string name="longi">Longitud</string>
    <string name="inventario">Inventario</string>
    <string name="litros">Litros</string>
    <string name="dias_restantes">Dias restantes</string>
    <string name="valorizado">Valorizado</string>
    <string name="sku_cliente">Sku Cliente</string>
    <string name="tipopromo"></string>
    <string name="calendario">Calendario</string>
    <string name="ultimo_relevo">Último Relevo</string>
    <string name="relevo_logistico">RELEVO</string>
    <string name="alerta_logistico">ALERTA</string>
    <string name="preforma_logistico">PREFORMA</string>
    <string name="model">Modelo</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="cantidad">Cantidad</string>
    <string name="ventas">Ventas</string>
    <string name="pvp">Pvp ($)</string>
    <string name="mecanica">Mecanica</string>
    <string name="periodo">Periodo</string>
    <string name="porta_productos">Productos</string>
    <string name="pcont">Precio Contado</string>
    <string name="fecharto">Fecha Rotacion</string>
    <string name="pcuotas">Precio Cuotas</string>
    <string name="cuota">Cuotas</string>
    <string name="vcuota">Valor Cuota</string>
    <string name="cuota2">Cuotas 2</string>
    <string name="vcuota2">""</string>
    <string name="quiebre">Quibre</string>
    <string name="Udisponible">Unidad Disponible</string>
    <string name="Csugerido">Sugerido :</string>
    <string name="Ccantidad">Cantidad</string>
    <string name="Sobservaciones">Observaciones</string>
    <string name="spiso">Piso</string>
    <string name="ventrada">Valor de Entrada</string>
    <string name="fpago">Forma de Pago</string>
    <string name="stienda">Stock Tienda</string>
    <string name="sgeneral">Stock General</string>
    <string name="num">Número Factura</string>
    <string name="modulo">Modulo</string>
    <string name="pos_id">Codigo</string>
    <string name="dealer">Dealer</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="correo">Correo</string>
    <string name="estado">Estado</string>
    <string name="reg">Registro</string>
    <string name="coord">Coordenadas</string>
    <string name="causal">Causal</string>
    <string name="tipo_logistico">Tipo de Logístico</string>
    <string name="sync_agotados">Agotados</string>
    <string name="establecimiento">Establecimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="material">Material POP</string>
    <string name="numero">Numero</string>
    <string name="producto">Producto</string>
    <string name="busqueda_rapida">Búsqueda Rápida</string>
    <string name="preciocredito">Precio Crédito</string>
    <string name="estadovisita">Estado de Visita</string>
    <string name="notificacion">Notificacion</string>
    <string name="action_info">Info</string>
    <string name="action_hist">Vaciar Historial</string>
    <string name="msg_just">Estás realizando una marcación fuera del rango.</string>
    <string name="msg_just2">Seleccionar <b>VERIFICAR ENTRADA</b> para continuar.</string>
    <string name="empty_list">No hay registros para mostrar...</string>
    <string name="marcas">CodigoMarca</string>
    <string name="marcasCliente">CodigoMarcaCliente</string>
    <string name="tareas">Tareas Asignadas</string>
    <string name="quiebres">Quiebre/Posible Quiebre</string>
    <string name="otrosshare">Otros</string>
    <string name="sugerido">Sugerido</string>
    <string name="observaciones">Observaciones</string>
    <string name="entrega">Tiempo de Entrega</string>
    <string name="disponible">Und. Disponible</string>
    <string name="target">Inventario</string>
    <string name="cant">Cantidad</string>
    <string name="cantt">CANT</string>
    <string name="souv">Souvenirs</string>
    <string name="display">Display</string>
    <string name="fechainicio">Fecha Inicio</string>
    <string name="fechafin">Fecha Fin</string>
    <string name="unidades">Unidades</string>
    <string name="bodega">Bodega</string>
    <string name="logistica">Logistica</string>
    <string name="Bodega">Bodega</string>
    <string name="promotor">Promotor</string>
    <string name="login">Ingresar</string>
    <string name="send">Enviar</string>
    <string name="next">Continuar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="salir">Salir</string>
    <string name="es_audio">Necesita permiso para grabar audio. Por favor habilitar desde el administrador de aplicaciones.</string>
    <string name="es_storage">Necesita permiso para utilizar el almacenamiento externo. Por favor habilitar desde el administrador de aplicaciones.</string>
    <string name="es_camera">Necesita permiso para utilizar la cámara. Por favor habilitar desde el administrador de aplicaciones.</string>
    <string name="all">all</string>
    <string name="action_sync">Cargar información retenida</string>
    <string name="action_bajada">SyncBajada</string>
    <string name="action_log">Status Enviado/No Enviado</string>
    <string name="action_registro">Registro</string>
    <string name="action_version">Version App</string>
    <string name="action_status">Status General</string>
    <string name="action_popup">Información</string>
    <string name="descarga">Descargar Nueva Version</string>
    <string name="action_test">Test</string>
    <string name="version">Aplicación Actualizada: 18/09/2026</string>
    <string name="account_type">com.luckyecuador.app.PintucoAPP.account</string>
    <string name="provider_authority">com.luckyecuador.app.PintucoAPP</string>
    <string name="siguiente">Siguiente</string>
    <string name="skip">Omitir</string>
    <string name="start">Finalizar</string>
    <string name="slide_1_title">Daily Workout</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_osa">QUIEBRES</string>
    <string name="menu_precios">PRECIOS</string>
    <string name="menu_sod">SHARE OF SHELF</string>
    <string name="menu_logistico">LOGISTICO</string>
    <string name="proforma_dialog_ver_titulo">Detalle de la visita</string>
    <string name="proforma_dialog_sin_evidencia">Todavía no se ha registrado una foto de evidencia</string>
    <string name="proforma_dialog_monto_propuesto_label">Precio Proforma sin iva</string>
    <string name="proforma_dialog_monto_propuesto_hint">$ 0.00</string>
    <string name="proforma_dialog_caracteristica_label">Característica de la visita</string>
    <string name="proforma_dialog_caracteristica_hint">Escriba la característica de la visita</string>
    <string name="proforma_dialog_acompanamiento_label">¿Visita con acompañamiento del técnico?</string>
    <string name="proforma_si">SI</string>
    <string name="proforma_no">NO</string>
    <string name="proforma_dialog_cancelar">CANCELAR</string>
    <string name="proforma_dialog_guardar">GUARDAR</string>
    <string name="proforma_cerrar_proceso_titulo">Cerrar Proceso</string>
    <string name="proforma_cerrar_proceso_advertencia">Esta acción es irreversible. Una vez cerrado, no podrá editarse ni reabrirse para nuevas modificaciones.</string>
    <string name="proforma_cerrar_proceso_label_observaciones">Observaciones </string>
    <string name="proforma_cerrar_proceso_hint">Escriba el motivo del cierre de este proceso. </string>
    <string name="proforma_cerrar_proceso_confirmar">🔒 Confirmar Cierre</string>
    <string name="menu_promo">PROMOCIONES</string>
    <string name="menu_exh">EXHIBICIONES</string>
    <string name="menu_logros">Logros</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_inventario">INVENTARIO + AGOTADOS</string>
    <string name="menu_ventas">VENTAS</string>
    <string name="menu_propensos">PROPENSOS</string>
    <string name="menu_productos_en_mal_estado">PRODUCTOS EN MAL ESTADO</string>
    <string name="menu_almuerzo">ALMUERZO</string>
    <string name="menu_prod_en_mal_estado">MAL ESTADO</string>
    <string name="menu_canjes">CANJES</string>
    <string name="menu_mci">MCI del PDV</string>
    <string name="menu_ejecucion_materiales">EJECUCIÓN DE MATERIALES</string>
    <string name="menu_pdi">PDI</string>
    <string name="menu_impulso">IMPULSO</string>
    <string name="menu_fotografico">FOTOGRAFICO</string>
    <string name="menu_malla">MALLA DE CODIFICADOS</string>
    <string name="menu_evidencias">ANTES Y DESPUES</string>
</resources>